// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinimalFooter renders a blc-au footer 1`] = `
<div
  className="bg-colour-surface-light dark:bg-colour-surface-dark w-full flex flex-col items-center px-[8px] pb-[24px] md:px-[16px] md:max-w-full lg:px-[160px] "
>
  <div
    className="border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark w-full border-t-[1px] flex flex-col items-center gap-[16px] pt-[16px] lg:flex-row lg:justify-between lg:items-center"
  >
    <p
      aria-label="Copyright Information"
      className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-base text-center tracking-tight whitespace-nowrap"
      role="contentinfo"
    >
      ©Blue Light Card 2008 - 2024
    </p>
    <div
      className="flex flex-wrap justify-center w-full lg:justify-end gap-[16px]"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.com.au/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Candidate Privacy Notice footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.com.au/candidate-privacy-notice.php"
        id="Candidate Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Candidate Privacy Notice
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.com.au/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.com.au/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`MinimalFooter renders a dds-uk footer 1`] = `
<div
  className="bg-colour-surface-light dark:bg-colour-surface-dark w-full flex flex-col items-center px-[8px] pb-[24px] md:px-[16px] md:max-w-full lg:px-[160px] "
>
  <div
    className="border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark w-full border-t-[1px] flex flex-col items-center gap-[16px] pt-[16px] lg:flex-row lg:justify-between lg:items-center"
  >
    <p
      aria-label="Copyright Information"
      className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-base text-center tracking-tight whitespace-nowrap"
      role="contentinfo"
    >
      <div
        className="flex flex-col md:flex-row md:gap-[4px] lg:flex-col"
      >
        <span>
          © Defence Discount Service 2012 - 2024
        </span>
        <span>
          Operated by Blue Light Card Ltd
        </span>
      </div>
    </p>
    <div
      className="flex flex-wrap justify-center w-full lg:justify-end gap-[16px]"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.defencediscountservice.co.uk/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Legal and Regulatory footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.defencediscountservice.co.uk/legal-and-regulatory.php"
        id="Legal and Regulatory-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Legal and Regulatory
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.defencediscountservice.co.uk/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.defencediscountservice.co.uk/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`MinimalFooter snapshot Test renders a blc-uk footer 1`] = `
<div
  className="bg-colour-surface-light dark:bg-colour-surface-dark w-full flex flex-col items-center px-[8px] pb-[24px] md:px-[16px] md:max-w-full lg:px-[160px] "
>
  <div
    className="border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark w-full border-t-[1px] flex flex-col items-center gap-[16px] pt-[16px] lg:flex-row lg:justify-between lg:items-center"
  >
    <p
      aria-label="Copyright Information"
      className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-base text-center tracking-tight whitespace-nowrap"
      role="contentinfo"
    >
      ©Blue Light Card 2008 - 2024
    </p>
    <div
      className="flex flex-wrap justify-center w-full lg:justify-end gap-[16px]"
    >
      <a
        aria-label="Terms & Conditions footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.co.uk/terms_and_conditions.php"
        id="Terms & Conditions-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Terms & Conditions
      </a>
      <a
        aria-label="Privacy Notice footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.co.uk/privacy-notice.php"
        id="Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Privacy Notice
      </a>
      <a
        aria-label="Legal and Regulatory footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.co.uk/legal-and-regulatory.php"
        id="Legal and Regulatory-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Legal and Regulatory
      </a>
      <a
        aria-label="Cookie Policy footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.co.uk/cookies_policy.php"
        id="Cookie Policy-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Cookie Policy
      </a>
      <a
        aria-label="Candidate Privacy Notice footer link"
        className="text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light leading-normal whitespace-nowrap"
        href="https://www.bluelightcard.co.uk/candidate-privacy-notice.php"
        id="Candidate Privacy Notice-nav-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        Candidate Privacy Notice
      </a>
    </div>
  </div>
</div>
`;
